# task-orchestrator

./: .gitignore  .pre-commit-config.yaml  Get-TreeProject.ps1  PROJECT-TRANSFORMATION-PLAN.md  README.md  assessment_report.md  changes-validations.md  complete_flow_test.ps1  complete_flow_test.py  comprehensive_flow_validation_report.md  configure.py  dashboard.py  dashboard_validator.py  debug_404.py  final_system_validation.py  flow_documentation_verification.md  main.py  orc.py  overall_success_criteria_review.md  project-analysis.md  project_documentation.md  project_structure.md  pyproject.toml  run_orchestrator.bat  summary-of-changes.md  task4_5_validation_report.md  task6_validation_report.md  task_creation_debugger.py  task_simulator.py  task_validation_report.md  transformation_review.md
.windsurf/rules/: credentials_handling.rule.md  python-quality.md  scheduler-error-handling.md
config/: __init__.py  settings.py
orchestrator/: __init__.py  cli.py
orchestrator/core/: __init__.py  config_manager.py  config_schema.py  database_transaction.py  environment.py  exceptions.py  execution_engine.py  scheduler.py  task_result.py
orchestrator/legacy/: __init__.py  task_manager.py
scripts/: start-dashboard.ps1  test_task.py  write_marker.py
sisense-field-search/: .gitignore  package.json
templates/: compact-task-scheduler.html  dashboard.html  scheduled_task_template.xml  task-manager-ui.html
tests/: __init__.py  test_cli.py  test_cli_configure.py  test_cli_parser_extra.py  test_config_manager.py  test_cron_and_scripts.py  test_email_notifications.py  test_end_to_end.py  test_imports.py  test_migration.py  test_orc_operations.py  test_scheduler.py  test_task_result.py  test_web_integration.py  test_windows_integration.py  test_windows_scheduler_additional.py  web_api_flow_test.py
tools/: __init__.py  cleanup.py  data_cleanup.py  migration.py  task_simulator.py
(+60 files in other folders)
