[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["I", "E", "F", "B"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
ignore_missing_imports = true
allow_untyped_defs = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-python-orchestrator"
version = "0.1.0"
description = "Python task orchestrator with Windows Scheduler integration and web dashboard"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
license = {text = "MIT"}
dependencies = [
    "flask>=2.3.0",
    "croniter>=1.3.0", 
    "cryptography>=41.0.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.7",
    "ruff>=0.4",
    "mypy>=1.6"
]

[project.scripts]
orc = "orchestrator.cli:main"
orc-dashboard = "orchestrator.cli:serve"

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*", "scripts*"]
exclude = ["tests*", "data*", "config*", "templates*"]